# keywords-dataset

./: .env  .gitignore  Cargo.toml  README.md
examples/: load_keywords.rs
sql/: ddl.sql
src/: args.rs  content.rs  db.rs  err.rs  extraction.rs  fetch.rs  header.rs  keyword.rs  lib.rs  main.rs  metadata.rs  subcommand.rs  training.rs
src/content/: body.rs  header.rs  keyword.rs  regexes.rs
src/db/: pages.rs
src/fetch/: client.rs  model.rs
src/metadata/: reader.rs
src/subcommand/: db.rs  extract.rs  pull_data.rs
src/subcommand/db/: load.rs
src/subcommand/pull_data/: writer.rs
