[package]
name = "keyword-dataset-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
thiserror = "2.0.12"
clap = { version = "4.5.34", features = ["derive"] }
clap_derive = "4.5.32"
chrono = "0.4.40"
env_logger = "0.11.8"
log = "0.4.27"
pdf-extract = "0.8.2"
regex = "1.11.1"
rand = "0.9.0"
rusqlite = { version = "0.31.0", features = ["chrono", "bundled"] }
threadpool = "1.8.1"
ureq = "3.0.10"
indicatif = "0.17.11"
